# provisionerd

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  default.nix  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/: CONTRIBUTING.md
protos/: provisionerd.proto  types.proto
protos/noelware/provisionerd/v1/: disks.proto  image.proto  networking.proto  provisionerd.proto  types.proto
src/: lib.rs
src/backend/: mod.rs
src/cli/provctl/: mod.rs
src/daemon/: mod.rs
src/types/: mod.rs
ui/: README
