# 🐻‍❄️🧊 provisionerd: Deploy VMs with code.
# Copyright 2023-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "provisionerd"
description = "🐻‍❄️🧊 Deploy VMs with code"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.noelware.org/products/provisionerd"
homepage = "https://noelware.org/products/provisionerd"
license = "Apache-2.0"
publish = false
repository = "https://github.com/Noelware/provisionerd"
rust-version = "1.71"
authors = [
    "Noel Towa <cutie@floofy.dev>",
    "John Burke <winter@winterfox.tech>",
    "Noelware, LLC. <team@noelware.org>",
]

[[bin]]
name = "provctl"
path = "./src/bin/provctl/main.rs"

[[bin]]
name = "provisionerd"
path = "./src/bin/provisionerd/main.rs"

[dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
clap_complete = "4.4.8"
cli-table = "0.4.7"
color-eyre = { version = "0.6.2", features = ["issue-url"] }
dotenvy = "0.15.7"
eyre = "0.6.11"
hcl-rs = "0.16.7"
mimalloc = "0.1.39"
noelware-config = { git = "https://github.com/Noelware/core-rs", version = "0.1.0", features = [
    "derive",
] }
noelware-log = { git = "https://github.com/Noelware/core-rs", version = "0.1.0" }
noelware-serde = { git = "https://github.com/Noelware/core-rs", version = "0.1.0", features = [
    "tracing",
] }
prometheus-client = "0.22.0"
prost = "0.12.3"
prost-types = "0.12.3"
remi = "0.5.0"
remi-fs = { version = "0.5.0", features = ["tracing", "serde"] }
remi-s3 = { version = "0.5.0", features = ["tracing", "serde"] }
sentry = "0.32.1"
sentry-eyre = "0.1.0"
sentry-tower = "0.32.1"
sentry-tracing = "0.32.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-util = "0.7.10"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.18"
ubyte = { version = "0.10.4", features = ["serde"] }
virt = "0.3.1"
virt-sys = "0.2.0"

[build-dependencies]
chrono = "0.4.31"
rustc_version = "0.4.0"
